[infra] : basename set to /tonalities to fit with production environment

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <base href="%PUBLIC_URL%/">
     <title>🎼 T O N A L I T I E S</title>
   </head>
   <body>
