Ergonomics: Open score #51

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="verovio-toolkit-wasm.js" defer></script>
 </head>
 
-<body>
+<body style="margin: 0">
   <noscript>You need to enable JavaScript to run the Tonalities webapp.</noscript>
   <div id="app"></div>
 </body>
