--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <base href="%PUBLIC_URL%/">
   <title>Tonalities</title>
-  <script type="text/javascript" src="verovio-toolkit-wasm.js" defer></script>
+  <script type="text/javascript" src="verovio-toolkit-wasm.js"></script>
 </head>
 
 <body style="margin: 0">
